--- a/about.html
+++ b/about.html
@@ -88,6 +88,13 @@
 				<li><a href="https://github.com/ProHunter67BG">Hristian Rusev</a> for providing German translations</li>
 				<li><a href="https://github.com/Neyko641">Neyko Naydenov</a> for providing Japanese translations</li>
 			</ol>
+			<h1>Known issues</h1>
+			<h2>Start session button or writer becomes really large</h2>
+			<p>Q: When I resize the window or finish a test, the start session button or the writer becomes really large, why is that?</p>
+			<p>
+				A: Unfortunarely, this peculiar error cannot be resolved by us, because it's mainly caused by third party extensions. One example is <a href="https://grammarly.com">Grammarly</a>.
+				The only way to stop that from happening is to find out which extension causes this and disable it for our site.
+			</p>
 			<hr>
 		</main>
 		<footer class="centered">
