--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<title class="site-title">Youyin </title>
 	</head>
-	<body>
+	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 		<header>
 			<ul>
 				<li><a href="./index.html" class="site-title">Youyin </a></li>
@@ -32,7 +32,7 @@
 				<li><a href="./about.html">About</a></li>
 			</ul>
 		</header>
-		<main id="main-page">
+		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 			<div id="character-info-widget">
 				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
 				<p id="character-info-widget-errors">Errors: To be loaded</p>
@@ -42,7 +42,7 @@
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<button id="start-button" class="card-button-edit centered character-prop">Click to start session</button>
+			<button id="start-button" class="card-button-edit centered character-prop" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">Click to start session</button>
 			<!-- This image will get dynamically imported by main-page.js when the button is clicked
 			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
 				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
