--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -35,6 +35,14 @@
 		<main id="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<div id="current-new-card" class="card centered">
+				<div id="input-mode" class="centered">
+					<p>Input: </p>
+					<div id="input-mode-internal">
+						<input type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">None</input>
+						<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">Pin1 yin1</input>
+					</div>
+				</div>
+
 				<h3>Name: </h3>
 				<input type="text" id="name-text-field" name="Name Text Field" aria-label="Name Text Field"></input>
 
