--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -13,7 +13,7 @@
 			Hangul, Katakana, Hiragana, hanzi, kanji, hanja, hangul, katakana, hiragana">
 		<meta name="author" content="MadLad Squad">
 
-		<link rel="icon" type="image/png" href="./favicon.png">
+		<link rel="icon" type="image/png" href="./favicon-new.png">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
