Added some new styles to make things better + fixed inconsistencies

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<ul>
 				<li><a href="./index.html" class="site-title">Youyin </a></li>
 				<li><a href="./deck.html">Deck</a></li>
+				<li><a href="./marketplace.html">Marketplace</a></li>
+				<li><a href="./account.html">Account</a></li>
 				<li><a href="./about.html">About</a></li>
 			</ul>
 		</header>
@@ -41,7 +43,9 @@
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<button id="start-button" class="card-button-edit centered character-prop" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">Click to start session</button>
+			<button id="start-button" class="card-button-edit centered character-prop large-button-text" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
+				Click to start session
+			</button>
 			<!-- This image will get dynamically imported by main-page.js when the button is clicked
 			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
 				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
