--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
 			<ul>
 				<li><a href="./index.html" class="site-title">Youyin </a></li>
 				<li><a href="./deck.html">Deck</a></li>
+				<li><a href="./marketplace.html">Marketplace</a></li>
+				<li><a href="./account.html">Account</a></li>
 				<li><a href="./about.html">About</a></li>
 			</ul>
 		</header>
