Remove unnecessary links when in session(improves visibility on mobile)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 		<header>
-			<ul>
-				<li><a href="./index.html" class="site-title">Youyin </a></li>
+			<ul id="main-page-header">
+				<li><a href="./index.html" id="main-page-header-home" class="site-title">Youyin </a></li>
 				<li><a href="./deck.html">Deck</a></li>
 				<li><a href="./marketplace.html">Marketplace</a></li>
 				<li><a href="./account.html">Account</a></li>
