--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 			<div id="character-info-widget">
 				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
-				<p id="character-info-widget-errors">Errors: To be loaded</p>
+				<p id="character-info-widget-errors">Cards: 0/0; Errors: 0</p>
 				<p>Definitions:</p>
 				<ol id="character-info-widget-info">
 					<li>To be loaded</li>
