--- a/account.html
+++ b/account.html
@@ -24,37 +24,14 @@
 		<title class="site-title">Youyin </title>
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-		<header>
-			<ul>
-				<li><a href="./index.html" class="site-title">Youyin </a></li>
-				<li><a href="./deck.html">Deck</a></li>
-				<li><a href="./marketplace.html">Marketplace</a></li>
-				<li><a href="./account.html">Account</a></li>
-				<li><a href="./about.html">About</a></li>
-			</ul>
-		</header>
+		{{ include components/header.tmpl.html }}
 		<main class="centered">
 			<h1 id="coming-soon-header">This page is coming soon! 🚧</h1>
 			<p id="coming-soon-text">Maybe check out the main <a href="https://madladsquad.com/">MadLad Squad's page</a> or <a href="./index.html">return to the main page</a>!</p>
 			<p id="coming-soon-text">Thank you for your patience! ❤️</p>
 		</main>
 		<hr id="main-page-hr">
-		<footer class="centered">
-			<p>
-				A <a href="https://madladsquad.com/">MadLad Squad</a> project!
-			</p>
-			<select aria-label="Language select box" name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
-				<option value="0">🇬🇧   EN</option>
-				<option value="1">🇧🇬   BG</option>
-				<option value="2">🇨🇳   CN</option>
-				<option value="3">🇹🇼   CN-T</option>
-				<option value="4">🇩🇪   DE</option>
-				<option value="5">🇲🇰   MK</option>
-				<option value="6">🇷🇺   RU</option>
-				<option value="7">🇯🇵   JP</option>
-			</select>
-		</footer>
-
+		{{ include components/footer.tmpl.html }}
 		<script src="./index.js"></script>
 	</body>
 </html>
