--- a/index.html
+++ b/index.html
@@ -24,15 +24,7 @@
 		<title class="site-title">Youyin </title>
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-		<header>
-			<ul id="main-page-header">
-				<li><a href="./index.html" id="main-page-header-home" class="site-title">Youyin </a></li>
-				<li><a href="./deck.html">Deck</a></li>
-				<li><a href="./marketplace.html">Marketplace</a></li>
-				<li><a href="./account.html">Account</a></li>
-				<li><a href="./about.html">About</a></li>
-			</ul>
-		</header>
+		{{ include components/header.tmpl.html }}
 		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 			<div id="character-info-widget">
 				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
@@ -55,22 +47,7 @@
 			</svg>-->
 		</main>
 		<hr id="main-page-hr">
-		<footer class="centered">
-			<p>
-				A <a href="https://madladsquad.com/">MadLad Squad</a> project!
-			</p>
-			<select aria-label="Language select box" name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
-				<option value="0">🇬🇧   EN</option>
-				<option value="1">🇧🇬   BG</option>
-				<option value="2">🇨🇳   CN</option>
-				<option value="3">🇹🇼   CN-T</option>
-				<option value="4">🇩🇪   DE</option>
-				<option value="5">🇲🇰   MK</option>
-				<option value="6">🇷🇺   RU</option>
-				<option value="7">🇯🇵   JP</option>
-			</select>
-		</footer>
-
+		{{ include components/footer.tmpl.html }}
 		<script src="./index.js"></script>
 	</body>
 	<script src="./main-page.js"></script>
