Even more efficient usage of templates

--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<title class="site-title">About | Youyin </title>
 	</head>
 	<body>
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main>
 			<h1>About Youyin</h1>
 			<p>
@@ -83,7 +83,6 @@
 			</ol>
 			<hr>
 		</main>
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 	</body>
 </html>
