--- a/account.html
+++ b/account.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css" type="text/css">
 
 		<title class="site-title">Youyin </title>
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main class="centered">
 			<h1 id="coming-soon-header">This page is coming soon! 🚧</h1>
 			<p id="coming-soon-text">Maybe check out the main <a href="https://madladsquad.com/">MadLad Squad's page</a> or <a href="./index.html">return to the main page</a>!</p>
 			<p id="coming-soon-text">Thank you for your patience! ❤️</p>
 		</main>
 		<hr id="main-page-hr">
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 	</body>
 </html>
