--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css" type="text/css">
 		<title class="site-title">Youyin </title>
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 			<div id="character-info-widget">
 				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
@@ -29,8 +29,7 @@
 			</svg>-->
 		</main>
 		<hr id="main-page-hr">
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 	</body>
 	<script src="./main-page.js"></script>
 </html>
