--- a/marketplace.html
+++ b/marketplace.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css" type="text/css">
 		<link rel="stylesheet" href="./marketplace.css" type="text/css">
 
 		<title class="site-title">Youyin Marketplace </title>
 	</head>
 	<body>
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main id="main">
 			<h1 class="centered">Official decks</h1>
 			<section id="deck">
@@ -22,8 +22,7 @@
 			<section id="deck-community-master">
 			</section>
 		</main>
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 	</body>
 	<script src="./marketplace.js"></script>
 </html>
