--- a/404.html
+++ b/404.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<title class="site-title">404 | Youyin </title>
 	</head>
 	<body>
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main class="centered">
 			<h1 id="err-404-emoji">\(o_o)/</h1>
 			<h1>Unfortunately this page doesn't exist 😔</h1>
 			<br>
 		</main>
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 	</body>
 </html>
