--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		{{ include components/head.tmpl.html }}
+		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css">
 
 		<title class="site-title">Edit Card | Youyin </title>
 	</head>
 	<body>
-		{{ include components/header.tmpl.html }}
+		{{ include Components/header.tmpl.html }}
 		<main id="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<div id="current-new-card" class="card centered">
@@ -49,8 +49,7 @@
 				</ol>
 			</div>
 		</main>
-		{{ include components/footer.tmpl.html }}
-		<script src="./index.js"></script>
+		{{ include Components/footer.tmpl.html }}
 		<script src="./deck-new.js"></script>
 	</body>
 </html>
