Update to use a trademark variable

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		{{ include Components/head.tmpl.html }}
-		<title class="site-title">404 | Youyin </title>
+		<title class="site-title">404 | {{ trademark }} </title>
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
