--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		{{ include Components/head.tmpl.html }}
-		<title class="site-title">About | Youyin </title>
+		<title class="site-title">About | {{ trademark }} </title>
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
 		<main>
-			<h1>About Youyin</h1>
+			<h1>About {{ trademark }}</h1>
 			<p>
-				Youyin(卣囙/yǒuyīn) is a simple platform for practicing hanzi/kanji/hanja/汉字/漢字 and/or other writing systems.
+				{{ trademark }}(卣囙/yǒuyīn) is a simple platform for practicing hanzi/kanji/hanja/汉字/漢字 and/or other writing systems.
 
 				<br><br>
 
@@ -26,15 +26,15 @@
 
 			<h2>The story of the app's development</h2>
 			<p>
-				In January 2023, <a href="https://madman10k.online/">Stanislav Vasilev(Madman10K)</a> decided to create Youyin as a solution for his obsession with learning Chinese characters and other
+				In January 2023, <a href="https://madman10k.online/">Stanislav Vasilev(Madman10K)</a> decided to create {{ trademark }} as a solution for his obsession with learning Chinese characters and other
 				writing systems. He found no existing solution that would help with that, so he decided to develop one himself. Initially started as a platform for learning to write Chinese characters, 
-				Youyin is currently expanding into more writing systems like Hiragana, Katakana, Cyrillic, Latin, Greek, etc.
+				{{ trademark }} is currently expanding into more writing systems like Hiragana, Katakana, Cyrillic, Latin, Greek, etc.
 
 				<br><br>
 
-				The name Youyin comes from a bad joke about the videogame <a href="https://en.wikipedia.org/wiki/Among_Us">Among us</a> where people all over the internet were going insane when they saw the 
-				geometric shape of the crewmates in the game. In Chinese, the name use the 2 symbols "卣囙", pronounced as "yǒuyīn" in pinyin, look like the crewmates. Additionally, the name of the 
-				site is similar to the following 3 words:
+				The name {{ trademark }} comes from a bad joke about the videogame <a href="https://en.wikipedia.org/wiki/Among_Us">Among us</a> where people all over the internet were going insane when 
+				they saw the geometric shape of the crewmates in the game. In Chinese, the name use the 2 symbols "卣囙", pronounced as "yǒuyīn" in pinyin, look like the crewmates. Additionally, 
+				the name of the site is similar to the following 3 words:
 			</p>
 			<ol>
 				<li>诱因 - meaning cause esp. of an illness, it's related to the site because you'll become sick of "I know how to write so much Chinese characters" syndrome</li>
@@ -49,7 +49,7 @@
 
 			<h2>Credits</h2>
 			<p>
-				Youyin uses the following open source libraries for most of the testing and text rendering functionality:
+				{{ trademark }} uses the following open source libraries for most of the testing and text rendering functionality:
 			</p>
 			<ol>
 				<li><a href="https://github.com/skishore/makemeahanzi">Makemeahanzi</a> - Provides the character information used by Hanziwriter</li>
@@ -72,13 +72,17 @@
 				The only way to stop that from happening is to find out which extension causes this and disable it for our site.
 			</p>
 
-			<h1>More like Youyin</h1>
-			<p><a href="https://madladsquad.com/">MadLad Squad</a> develops more than just Youyin, check out the following CJK/Language learning applications and libraries<p/>
+			<h1>More like {{ trademark }}</h1>
+			<p><a href="https://bgks.madladsquad.com">BGKS</a> - A website for correcting grammar, punctuation and spelling</p>
+			<p><a href="https://littok.madladsquad.com">LitTok</a> - Book reading as TikTok</p>
+			<p><a href="https://madladsquad.com/">MadLad Squad</a> develops more than just {{ trademark }}, check out the following CJK/Language learning applications and libraries<p/>
 			<ol>
+				<li><a href="https://bgks.madladsquad.com">BGKS</a> - A website for correcting grammar, punctuation and spelling</li>
+				<li><a href="https://littok.madladsquad.com">LitTok</a> - Book reading as TikTok</li>
 				<li>
 					<a href="https://github.com/MadLadSquad/UntitledIBusHandwriting">UntitledIBusHandwriting</a> - A handwriting plugin for <a href="https://en.wikipedia.org/wiki/Intelligent_Input_Bus">ibus</a>
 				</li>
-				<li><a href="https://github.com/MadLadSquad/hanzi-writer-data-youyin">hanzi-writer-data-youyin</a> - All character data used in Youyin in one place</li>
+				<li><a href="https://github.com/MadLadSquad/hanzi-writer-data-youyin">hanzi-writer-data-youyin</a> - All character data used in {{ trademark }} in one place</li>
 				<li><a href="https://madladsquad.com/untitled-desktop/subprojects/i18n">i18n project</a> - The MadLad Squad i18n(internationalisation) project</li>
 			</ol>
 			<hr>
