--- a/deck.html
+++ b/deck.html
@@ -4,7 +4,7 @@
 		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css">
 
-		<title class="site-title">Deck | Youyin </title>
+		<title class="site-title">Deck | {{ trademark }} </title>
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
