--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css" type="text/css">
-		<title class="site-title">Youyin </title>
+		<title class="site-title">{{ trademark }} </title>
 	</head>
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 		{{ include Components/header.tmpl.html }}
