--- a/deck.html
+++ b/deck.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
+		<h1 class="centered">Deck</h1>
 		<main id="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<div id="profile-card" class="card centered">
