--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -8,14 +8,19 @@
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
+		<h1 id="deck-new-card-header" class="centered">New card</h1>
 		<main id="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<div id="current-new-card" class="card centered">
 				<div id="input-mode" class="centered">
 					<p>Input: </p>
 					<div id="input-mode-internal">
-						<input type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">None</input>
-						<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">Pin1 yin1</input>
+						<div>
+							<input 	type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">None</input>
+						</div>
+						<div title="Enables you to use Pinyin number notation in text boxes. It will then convert the text to actual pinyin. Example: 'pin1 yin1' will become 'pīn yīn'.">
+							<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">Pin1 yin1</input>
+						</div>
 					</div>
 				</div>
 
