Fixed major UI regression, caused as a result of the change from deck id to deck class

--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -9,7 +9,7 @@
 	<body>
 		{{ include Components/header.tmpl.html }}
 		<h1 id="deck-new-card-header" class="centered">New card</h1>
-		<main id="deck">
+		<main class="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<div id="current-new-card" class="card centered">
 				<div id="input-mode" class="centered">
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 				</div>
-
+				<br/>
 				<h3>Name: </h3>
 				<input type="text" id="name-text-field" name="Name Text Field" aria-label="Name Text Field"></input>
 
