--- a/marketplace.html
+++ b/marketplace.html
@@ -11,7 +11,7 @@
 		{{ include Components/header.tmpl.html }}
 		<main id="main">
 			<h1 class="centered">Official decks</h1>
-			<section id="deck">
+			<section id="marketplace-deck-container" class="deck">
 				<div id="new-deck-upload-card" class="card centered">
 					<h3 id="new-card-header-smaller">+</h3>
 					<p>Want to add your deck to the marketplace? Click below to learn more!</p>
