--- a/index.html
+++ b/index.html
@@ -8,25 +8,37 @@
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 		{{ include Components/header.tmpl.html }}
 		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-			<div id="character-info-widget">
-				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
-				<p id="character-info-widget-errors">Cards: 0/0; Errors: 0</p>
-				<p>Definitions:</p>
-				<ol id="character-info-widget-info">
-					<li>To be loaded</li>
-				</ol>
-			</div>
+			<section id="main-page-info-container">
+				<div id="phrase-info-widget">
+					<p id="phrase-info-widget-spelling">My phrase</p>
+					<p id="phrase-info-widget-errors">Phrases: 0/0; Errors: 0</p>
+					<p>Definitions</p>
+					<ol id="phrase-info-widget-info">
+						<li>To be loaded</li>
+					</ol>
+				</div>
+				<div id="character-info-widget">
+					<p id="character-info-widget-spelling">Spelling: To be loaded</p>
+					<p id="character-info-widget-errors">Cards: 0/0; Errors: 0</p>
+					<p>Definitions:</p>
+					<ol id="character-info-widget-info">
+						<li>To be loaded</li>
+					</ol>
+				</div>
+			</section>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<button id="start-button" class="card-button-edit centered character-prop large-button-text" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-				Click to start session
-			</button>
-			<!-- This image will get dynamically imported by main-page.js when the button is clicked
-			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
-				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
-				<line x1="100%" y1="0" x2="0" y2="100%" stroke="#DDD" />
-				<line x1="50%" y1="0" x2="50%" y2="100%" stroke="#DDD" />
-				<line x1="0" y1="50%" x2="100%" y2="50%" stroke="#DDD" />
-			</svg>-->
+			<section id="start-button-writer-section">
+				<button id="start-button" class="card-button-edit centered character-prop large-button-text" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
+					Click to start session
+				</button>
+				<!-- This image will get dynamically imported by main-page.js when the button is clicked
+				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
+					<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
+					<line x1="100%" y1="0" x2="0" y2="100%" stroke="#DDD" />
+					<line x1="50%" y1="0" x2="50%" y2="100%" stroke="#DDD" />
+					<line x1="0" y1="50%" x2="100%" y2="50%" stroke="#DDD" />
+				</svg>-->
+			</section>
 		</main>
 		<hr id="main-page-hr">
 		{{ include Components/footer.tmpl.html }}
