Minor UI/UX improvements. Fix errors if no phrases are there. Utilise the addElement function to simplify codebase

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div id="character-info-widget">
 					<p id="character-info-widget-spelling">Spelling: To be loaded</p>
 					<p id="character-info-widget-errors">Cards: 0/0; Errors: 0</p>
-					<p>Definitions:</p>
+					<p id="character-info-widget-def-p">Definitions:</p>
 					<ol id="character-info-widget-info">
 						<li>To be loaded</li>
 					</ol>
