--- a/deck.html
+++ b/deck.html
@@ -27,7 +27,7 @@
 					<h1 id="new-card-header">+</h1>
 					<p>Add a new card to the deck</p>
 					<button id="new-card-button" class="card-button-edit" onclick="location.href='./deck-edit-card.html?new'">New card</button>
-					<button id="new-phrase-button" class="card-button-edit">New phrase</button>
+					<button id="new-phrase-button" class="card-button-edit" onclick="location.href='./deck-edit-card.html?phrase-new'">New phrase</button>
 					<br>
 					<input type="file" id="fileupload"><button id="import-deck-button" class="card-button-edit">Import</button></input>
 					<button id="export-deck-button" class="card-button-edit">Export</button>
